Create custom EndOfStreamException exception class
EndOfStreamException indicates which video capture device could not capture the next frame

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set (MyProject_SOURCES
     ./src/main.cpp
     ./src/main.h
     ./src/GenericIncludes.h
+    ./src/EndOfStreamException.cpp
+    ./src/EndOfStreamException.h
 )
 find_package(OpenCV REQUIRED)
 add_executable(MyProject ${MyProject_SOURCES})
